# aletheia

./: .env.example  .gitignore  EVALUATION.md  NERVOUS-SYSTEM.md  PHILOSOPHY.md  README.md  SCOPE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
aletheia/: __init__.py  __main__.py  cli.py  config.py  llm.py  models.py  reporter.py  runner.py  scorer.py  security.py
aletheia/dimensions/: __init__.py  apriori.py  base.py  care.py  embodied.py  falling.py  finitude.py  horizon.py  thrownness.py  unconcealment.py
aletheia/nervous/: __init__.py  graph.py  signals.py  state.py  transport.py
aletheia/prompts/: __init__.py
docs/: NERVOUS-SYSTEM-IMPLEMENTATION.md  reflexive-probes-spec.md
examples/: sample_report.json  solarcraft_graph.json
openclaw_skills/skills/: __init__.py
openclaw_skills/skills/change_planner/: git_ops.py  models.py  planner.py  skill.py
openclaw_skills/skills/falling_detector/: detector.py  models.py  skill.py
openclaw_skills/skills/guardrail_engine/: engine.py  models.py  rules.py  skill.py
openclaw_skills/skills/horizon_fusion/: skill.py
openclaw_skills/skills/instruction_compiler/: compiler.py  models.py  skill.py
openclaw_skills/skills/runtime_uci/: models.py  scorer.py  skill.py
openclaw_skills/skills/state_tracker/: models.py  skill.py  storage.py  tracker.py
openclaw_skills/skills/thrownness_interpreter/: skill.py
openclaw_skills/skills/tool_guard/: audit.py  models.py  rate_limiter.py  skill.py  validator.py
suites/: quick.yaml  standard.yaml
tests/: __init__.py  test_config.py  test_dimensions.py  test_models.py  test_nervous_system.py  test_registry.py  test_scorer.py
tests/fixtures/: aletheia_graph.json  atlas_graph.json
tests/skills/: test_guardrail_engine.py  test_runtime_uci.py  test_state_tracker.py  test_tool_guard.py
